# midi2cv

./: Cargo.toml  README.md  build.rs  midi2cv.py
.cargo/: config.toml
2cv/: 2cv.ino
examples/: pico_blinky.rs
midi2/: midi2.ino
src/: adafruit_MCP4728.rs  main.rs
